New .obj importer fails to import faces that refer to non-existing normal indices #98782
Labels
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset System
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Viewport & EEVEE
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Asset Browser Project
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Module
Viewport & EEVEE
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Severity
High
Severity
Low
Severity
Normal
Severity
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
No due date set.
Dependencies
No dependencies set.
Reference: blender/blender#98782
Loading…
Reference in New Issue
Block a user
No description provided.
Delete Branch "%!s()"
Deleting a branch is permanent. Although the deleted branch may continue to exist for a short time before it actually gets removed, it CANNOT be undone in most cases. Continue?
Short Description
New obj importer fails to import faces one of my test files. It imports the vertices only.
old python .obj importer can import same file without issue.
The test file:
test.obj
At the console, there are some messages:
Added subscriber: @amy_aimei
Wavefront (.obj) (Experimental) fails to import facesto New .obj importer fails to import facesChanged status from 'Needs Triage' to: 'Confirmed'
Added subscribers: @PratikPB2123, @aras_p
@amy_aimei the issue seems to be that the .obj file face definitions try to refer to the vertex normals, but there are no vertex normals present in the file at all. So the code as is written now goes "whelp, invalid data, I'm gonna ignore this face". You could say that is a "correct" approach, but given that the old importer was apparently silently ignoring vertex normal indices, when no normals were present, then I'll try to fix this, to accept the invalid normal indices as well.
Which software did you use to produce this obj file?
New .obj importer fails to import facesto New .obj importer fails to import faces that refer to non-existing normal indices@aras_p I think it is related to the normals too. But I have tried to import another file exported by the new OBJ exporter with Normals checkbox unchecked, which creates an OBJ without vn. That works.
That OBJ file is generated by my own program that writes vertices and faces data into an OBJ file.
@amy_aimei so ideally your own program, if it does not output normals, should not write normal indices in
f
lines, i.e. it should output things likef 1/1 2/2
instead off 1/1/1 2/2/2
This issue was referenced by
b6c5763b8e
This issue was referenced by
e1f15e3b32
Changed status from 'Confirmed' to: 'Resolved'
@aras_p Thanks. I also modified my code to output the f lines in the format f 1/1 2/2 instead of f 1/1/1 2/2/2. It works.